--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL = https://inventorymanagementonlinebe.onrender.com/
+VITE_BACKEND_URL = https://inventorymanagementonlinebe.onrender.com
